<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1F5F8"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtCpf"
        android:layout_width="327dp"
        android:layout_height="49dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_aqui_seu_cpf"
        android:inputType="number"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtRenda"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_aqui_sua_renda_mensal"
        android:inputType="number"
        android:textColor="#2196F3"
        android:textColorHint="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNasc" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="213dp"
        android:layout_height="66dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="#C8C1C1"
        android:text="@string/solicitar"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRenda" />

    <EditText
        android:id="@+id/txtNasc"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dd_mm_yyyy_data_de_nascimento"
        android:inputType="textPersonName"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCpf" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="71dp"
        android:text="@string/auxilio_emergencial"
        android:textColor="#3F51B5"
        android:textColorHint="#2FFFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>